STARCH-817 final refactoring pass, unstable work in progress